# imaque

./: .coveragerc  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.txt  development.ini  production.ini  pytest.ini  setup.cfg  setup.py
imaque/: __init__.py  tests.py  views.py
imaque/templates/: layout.jinja2  mytemplate.jinja2  template.jinja2
src/imaque/: imaque.py
tests/: test_imaque.py
