[metadata]
name = imaque
version = 0.1.0
description = None
long_description =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
install_requires =
    zope.interface
    click
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts =
    imaque = imaque.imaque:main

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

